--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,11 @@
         android:gravity="center"
         android:orientation="vertical">
 
+
         <ImageView
             android:id="@+id/foto_perfil"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginTop="50dp"
             android:src="@drawable/me"
             />
     </LinearLayout>
@@ -28,6 +28,7 @@
 
 
         <TextView
+            android:id="@+id/text_nombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Andrés Quijada"
@@ -43,7 +44,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="50dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -54,6 +55,7 @@
                 />
 
             <TextView
+                android:id="@+id/text_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="00099216@uca.edu.sv"
@@ -67,6 +69,7 @@
                 android:src="@drawable/git"
                 />
             <TextView
+                android:id="@+id/text_git"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="00099216"
@@ -88,6 +91,7 @@
                 android:layout_height="25dp"
                 android:src="@drawable/twitter"/>
             <TextView
+                android:id="@+id/text_twitter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="AndresQuijada_"
@@ -101,6 +105,7 @@
                 android:src="@drawable/telefono"
                 android:layout_marginLeft="25dp"/>
             <TextView
+                android:id="@+id/text_telefono"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="78192239"
@@ -108,18 +113,28 @@
                 android:layout_margin="5dp"/>
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_marginTop="50dp">
 
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/boton_share"
+                android:src="@drawable/share"
+                android:background="@android:color/transparent"
+                />
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Powered By: Andrés Quijada"
-                android:textSize="7sp"
-                android:layout_marginTop="50dp"
-                android:gravity="center_horizontal"/>
+                android:layout_marginTop="130dp"
+                android:textSize="8sp"/>
         </LinearLayout>
 
     </LinearLayout>
